Update TaranArtem03-04: center for background

--- a/Lab3/TaranArtem03-04.html
+++ b/Lab3/TaranArtem03-04.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaranArtemLab03-04.html</title>
     <style>
-       
         .right-aligned {
             text-align: right;
         }
         body {
-        /*text*/
-        text-align: justify;
-        background-color: #000000; 
-        color: #fab254; 
-        font-family: 'Arial', sans-serif; 
+            text-align: justify;
+            background-color: #000000; 
+            color: #fab254; 
+            font-family: 'Arial', sans-serif; 
 
-        /*backgound*/
-        background-image: url('background03-04.jpg'); /* Вкажіть шлях до зображення */
-        background-size: cover; /* Зображення розтягнеться на весь екран */
-        background-position: center; /* Зображення буде вирівняно по центру */
-        background-repeat: no-repeat; /* Зображення не буде повторюватися */
+            /*background*/
+            background-image: url('background03-04.jpg'); /* Вкажіть шлях до зображення */
+            background-size: cover; /* Зображення розтягнеться на весь екран */
+            background-position: center; /* Зображення буде вирівняно по центру */
+            background-repeat: no-repeat; /* Зображення не буде повторюватися */
+            background-attachment: fixed; /* Зображення не переміщуватиметься при прокрутці */
+            height: 100vh; /* Висота тіла на 100% висоти вікна */
         }
         .center {
             display: block;
@@ -36,34 +36,33 @@
     </style>
 </head>
 <body>
-    <H1>Група в якій навчаюся:</H1>
-        <div class="text-block">
-            Власов	Антон	Ігорович
-            Вовк	Юрій	Антонович
-            Галаган	Богдан	Григорович
-            Гладкін	Ростислав	Андрійович
-            Журавльов	Єгор	Станіславович
-            Кібкало	Максим	Миколайович
-            Коваленко	Денис	Андрійович
-            Котелевський	Михайло	Юрійович
-            Литвиненко	Антон	Олександрович
-            Лутицький	Максим	Сергійович
-            Поліщук	Євгеній	Васильович
-            Полтавець	Андрій	Сергійович
-            Почуєв	Владислав	Сергійович
-            Роман	Андрій	Олегович
-            Саміло	Владислав	Юрійович
-            Смолянський	Станіслав	Ігорович
-            Соляник	Алла	Андріївна
-            Таран	Артем	Ярославович
-            Чирков	Святослав	Олександрович
-            Швець	Денис	Олександрович
-            Шевелєв	Сергій	Олександрович
-            Шевчик	Кирило	Вікторович
-            Шендер	Євгеній	Валерійович
-            Шкурка	Андрій	Миколайович
-            Шпетний	Максим	Олегович   
-        </div>
-
+    <h1>Група в якій навчаюся:</h1>
+    <div class="text-block">
+        Власов	Антон	Ігорович<br>
+        Вовк	Юрій	Антонович<br>
+        Галаган	Богдан	Григорович<br>
+        Гладкін	Ростислав	Андрійович<br>
+        Журавльов	Єгор	Станіславович<br>
+        Кібкало	Максим	Миколайович<br>
+        Коваленко	Денис	Андрійович<br>
+        Котелевський	Михайло	Юрійович<br>
+        Литвиненко	Антон	Олександрович<br>
+        Лутицький	Максим	Сергійович<br>
+        Поліщук	Євгеній	Васильович<br>
+        Полтавець	Андрій	Сергійович<br>
+        Почуєв	Владислав	Сергійович<br>
+        Роман	Андрій	Олегович<br>
+        Саміло	Владислав	Юрійович<br>
+        Смолянський	Станіслав	Ігорович<br>
+        Соляник	Алла	Андріївна<br>
+        Таран	Артем	Ярославович<br>
+        Чирков	Святослав	Олександрович<br>
+        Швець	Денис	Олександрович<br>
+        Шевелєв	Сергій	Олександрович<br>
+        Шевчик	Кирило	Вікторович<br>
+        Шендер	Євгеній	Валерійович<br>
+        Шкурка	Андрій	Миколайович<br>
+        Шпетний	Максим	Олегович<br>   
+    </div>
 </body>
 </html>
